Fix flex header layout and spacing issues
- Added left and right containers to properly separate header content
- Fixed Layout alignment using flexbox (horizontal + vertical alignment)
- Removed default margin and padding from ul to elimate unwanted spacing
- Ensured concistent spacing between elements using single gap system
-

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,8 +2,7 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  padding: 6px;
-  flex-flow: row;
+  padding: 8px;
   justify-content: space-between;
   align-items: center;
 }
@@ -19,10 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   display: flex;
-  flex-direction: row;
+  gap: 8px
 
 }
 
@@ -32,5 +31,4 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  margin: 10px;
 }
